# ym-sprite-editor

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json  ym-sprite-editor.cpp  ym-sprite-editor.h
lib/: CMakeLists.txt
lib/cmake/: lib_utils.cmake  ym-sprite-editor-lib-config.cmake.in
lib/include/: ym-sprite-editor.h
lib/include/ym-sprite-editor/: math.h  types.h
lib/src/: editor.cpp  ym-sprite-editor.cpp
